# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile
configuration/: base.yaml  production.yaml
migrations/: 20220623073505_create_subscriptions_table.sql  20220709123444_seed_user.sql  20220716084515_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
