[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "=1", features = ["macros", "rt-multi-thread", "rt"] }
config = "0.13.1"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
chrono = "0.4.19"
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
once_cell = "1.12.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"
serde-aux = "3.0.1"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.15.0"
fake = "2.5.0"
wiremock = "0.5.13"
serde_json = "1.0.81"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.31"
anyhow = "1.0.58"
base64 = "0.13.0"
argon2 = { version = "0.4.1", features = ["std"] }
urlencoding = "2.1.0"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4.1", features = ["cookies"] }
actix-web-lab = "0.16.4"

[dependencies.actix-session]
git = "https://github.com/actix/actix-extras"
branch = "master"
features = ["redis-rs-tls-session"]

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
linkify = "0.8.1"
serde_urlencoded = "0.7.1"
